2013-05-13  DJ Delorie  <dj@delorie.com>
	    Nick Clifton  <nickc@redhat.com>

	* MAINTAINERS (msp430): Add.
	* configure.host (msp430): Add.
	* libc/include/machine/ieeefp.h: Add MSP430 support.
	* libc/include/machine/setjmp.h: Likewise.
	* libc/include/sys/config.h: Likewise.
	* libc/machine/configure.in (msp430): Add.
	* libc/machine/configure: Regenerate.
	* libc/machine/msp430: New directory.

2013-05-10  Freddie Chopin  <freddie_chopin@op.pl>

	* configure.in: Fix help text for disable-newlib-atexit-dynamic-alloc option.
	* configure: Regenerated.

2013-05-07  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libc/include/sys/config.h (_REENT_GLOBAL_ATEXIT): Define for
	RTEMS.
	* libc/include/sys/reent.h (_reent): Use _REENT_GLOBAL_ATEXIT.
	(_global_atexit): Declare if _REENT_GLOBAL_ATEXIT is defined.
	* libc/reent/reent.c (_reclaim_reent): Remove atexit cleanup if
	_REENT_GLOBAL_ATEXIT is defined.
	(_wrapup_reent): Remove atexit handling if _REENT_GLOBAL_ATEXIT
	is defined.
	* libc/stdlib/__atexit.c (_global_atexit0): Define if
	_REENT_GLOBAL_ATEXIT is defined.
	* libc/stdlib/__call_atexit.c (_global_atexit): Define if
	_REENT_GLOBAL_ATEXIT is defined.

2013-05-07  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libc/include/sys/reent.h (_ATEXIT_INIT): Define.
	(_ATEXIT_INIT_PTR): Likewise.
	(_REENT_INIT_ATEXIT): Likewise.
	(_REENT_INIT_ATEXIT_PTR): Likewise.
	(_GLOBAL_ATEXIT): Likewise.
	* libc/stdlib/__atexit.c (_GLOBAL_ATEXIT0): Define.
	(__register_exitproc): Use _GLOBAL_ATEXIT and _GLOBAL_ATEXIT0.
	* libc/stdlib/__call_atexit.c (__call_exitprocs): Likewise.

2013-05-07  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libc/stdlib/__atexit.c (__atexit_lock): Declare.
	* libc/stdlib/__call_atexit.c (__atexit_lock): Define.

2013-05-06  Sandra Loosemore  <sandra@codesourcery.com>

	* configure.host (machine_dir, sys_dir, syscall_dir, newlib_cflags):
	Add settings for nios2*.