@@ -1,3 +1,7 @@
+2013-05-16  Sebastian Huber <sebastian.huber@embedded-brains.de>
+
+	* libc/reent/reent.c (_wrapup_reent): Remove.
+
 2013-05-13  DJ Delorie  <dj@delorie.com>
 	    Nick Clifton  <nickc@redhat.com>
 
